--- a/0x0A-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x0A-i18n/translations/en/LC_MESSAGES/messages.po
@@ -18,8 +18,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
 
-msgid "%(home_title)"
+msgid "home_title"
 msgstr "Welcome to Holberton"
 
-msgid "%(home_header)"
+msgid "home_header"
 msgstr "Hello world!"
